--- a/lib/generators/awesome_share_buttons/templates/config/locales/awesome_share_buttons.en.yml
+++ b/lib/generators/awesome_share_buttons/templates/config/locales/awesome_share_buttons.en.yml
@@ -2,6 +2,7 @@ en:
   awesome_share_buttons:
     share_to: Share to %{name}
     twitter: Twitter
+    vk: VKontakte
     facebook: Facebook
     delicious: Delicious
     google_plus: Google+
