social pages function added

--- a/lib/generators/awesome_share_buttons/templates/config/locales/awesome_share_buttons.en.yml
+++ b/lib/generators/awesome_share_buttons/templates/config/locales/awesome_share_buttons.en.yml
@@ -1,6 +1,7 @@
 en:
   awesome_share_buttons:
     share_to: Share to %{name}
+    share_to: We are at %{name}
     twitter: Twitter
     vk: VKontakte
     facebook: Facebook
