--- a/lib/generators/awesome_share_buttons/templates/config/locales/awesome_share_buttons.ru.yml
+++ b/lib/generators/awesome_share_buttons/templates/config/locales/awesome_share_buttons.ru.yml
@@ -1,6 +1,7 @@
 ru:
   awesome_share_buttons:
     share_to: Поделиться %{name}
+    link_to: Наша страница %{name}
     twitter: в Twitter
     vk: ВКонтакте
     facebook: в Facebook
