--- a/config/locales/awesome_share_buttons.en.yml
+++ b/config/locales/awesome_share_buttons.en.yml
@@ -6,6 +6,7 @@ en:
     twitter: Twitter
     vk: VKontakte
     facebook: Facebook
+    youtube: YouTube
     delicious: Delicious
     google_plus: Google+
     tumblr: Tumblr
