--- a/config/locales/awesome_share_buttons.ru.yml
+++ b/config/locales/awesome_share_buttons.ru.yml
@@ -6,6 +6,7 @@ ru:
     twitter: в Twitter
     vk: ВКонтакте
     facebook: в Facebook
+    youtube: в YouTube
     delicious: в Delicious
     google_plus: в Google+
     tumblr: в Tumblr
